@@ -34,6 +34,8 @@
 #include <windows.h>
 #endif
 
+SYX_BEGIN_DECLS
+
 typedef syx_uint32 SyxErrorType;
 
 typedef struct SyxErrorEntry SyxErrorEntry;
@@ -49,27 +51,10 @@ EXPORT extern void syx_error_init (void);
 EXPORT extern void syx_error_clear (void);
 EXPORT extern SyxErrorType syx_error_register (syx_symbol name, SyxOop klass);
 EXPORT extern SyxErrorEntry *syx_error_lookup (SyxErrorType type);
-
-/*!
-  Signal an error in the Smalltalk environment.
-
-  \param type the type returned by syx_error_register
-*/
-#define syx_signal(type, ...)						\
-  (syx_interp_enter_context (syx_send_message (syx_interp_get_current_context (), \
-					       syx_error_lookup (type)->klass, \
-					       "signal",		\
-					       __VA_ARGS__)))
-/*!
-  Create an error Context in the Smalltalk environment ready to enter a Process.
-
-  \param type the type returned by syx_error_register
-*/
-#define syx_signal_create_context(type, ...)				\
-  (syx_send_message (syx_interp_get_current_context (),			\
-		     syx_error_lookup (type)->klass,			\
-		     "signal",						\
-		     __VA_ARGS__))
+EXPORT extern syx_bool syx_signal (SyxErrorType, syx_int32 num_args, ...);
+EXPORT extern void syx_warning (syx_symbol fmt, ...);
+EXPORT extern void syx_error (syx_symbol fmt, ...);
+EXPORT extern void syx_perror (syx_symbol message);
 
 /*! Send receiver>>#doesNotUnderstand: with selector */
 #define syx_signal_does_not_understand(receiver, selector)		\
@@ -78,56 +63,9 @@ EXPORT extern SyxErrorEntry *syx_error_lookup (SyxErrorType type);
 						      "doesNotUnderstand:", \
 						      selector)))
 
-/*!
-  Display an error then exits.
-
-  This function will show an error MessageBox on Windows CE
-*/
-#ifndef WINCE
-#define syx_error(...)				\
-  {						\
-    fprintf (stderr, "ERROR: ");		\
-    fprintf (stderr, __VA_ARGS__);		\
-    exit (EXIT_FAILURE);			\
-  }
-#else /* WINCE */
-#ifndef UNICODE
-#define syx_error(message, ...)						\
-  {									\
-    MessageBox (0, message, "Error", 0);				\
-    exit(EXIT_FAILURE);							\
-  }
-#else /* UNICODE */
-#define syx_error(message, ...)						\
-  {									\
-    MessageBox (0, syx_to_wstring (message), L"Error", 0);		\
-    exit(EXIT_FAILURE);							\
-  }
-#endif /* UNICODE */
-
-#endif /* WINCE */
-
-
-/*! Display a warning message */
-#define syx_warning(...)			\
-  {						\
-    fprintf (stderr, "WARNING: ");		\
-    fprintf (stderr, __VA_ARGS__);		\
-  }
-
-/*! Display perror message and exit */
-#ifdef HAVE_PERROR
-#define syx_perror(...)				\
-  {						\
-    perror (__VA_ARGS__);			\
-    exit (EXIT_FAILURE);			\
-  }
-#else
-#define syx_perror syx_error
-#endif
-
 /*! Display debugging messages */
 #define syx_debug printf
-    
+
+SYX_END_DECLS    
 
 #endif /* SYX_ERROR_H */
